--- a/README.Rmd
+++ b/README.Rmd
@@ -12,164 +12,95 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Summary
-New versions of the following files were created. A main theme of the changes was pulling stuff out of `effect_robustness` and writing stand alone functions for that stuff. 
-
-  * newData-Prep.R: the function `dif_data_prep` now replaces `dif_prep`. It contains some stuff previously in `dif_analysis`: no.var.items, no.var.by.group.items, and poly.items.
-  
-  * newDIF-Analysis.R: Now includes `dif_models` which runs the `dif.mod` and, if necessary, the `no.dif.mod` previously in `effect_robustness`.
-  
-  * Hedges2007.R: replaces Est-Smd.R with an effect size function that has less input options.
-  
-  * new_Robusntess-Functions.R includes a stripped down version of `effect_robustness` that is basically
-  just a wrapper for `hedges2007` as well as a bunch of helper functions that work on the output of `effect_robustness`. 
-  
-  * newPlot-Functions.R Minor updates to existing plots and added `effects_plot` previously in `effect_robustness`.
-  
-A second theme was to chain the functions so that, once the user specifices the data, the rest is on rails. If the user wants to run a conditional or an unconditional analysis, that is all specified in terms of the new `dif_data_prep` function. Once the data is prepped, that is the only input required by the user to produce a report. There are other ways to use the functions too but that was the target use case. 
-
-A lot of variables were renamed along the way. I know this is a pain in the but I think it helps address the issues we talked about before (e.g., using "scale" in multiple different ways).
-
-  * item.data replaces measure.data and data and similar variants
-  * dif.group.id replaces dif.group
-  * tx.group.id replaces tx.group
-  * cluster.id replaces clusters
-  * na.to.0 replaces na0
-  * match.type replaces score.type
-  * I am probably missing some 
-  
- Note that I didn't do any renaming in functions that I did not edit, notably the low-level dif functions (e.g. loess). So changes of var.names is no universal yet. The probably don't need to be either. 
-
-In summary, I did a lot of re-arranging in the "middle layer" of the project. What is left to do is plug the new output illustrated below into `dif_report`. I tried to make sure that the new outputs are comparably formatted to what was coming out of `effect_robusness`. The main difference is that the new outputs are formatted as list. Anyway, I hope it isn't too much of pain to patch up the report again...let me know if it is.  
-
-# Example
-
-Data prep is now via `dif_data_prep`. 
-
-```{r, message=FALSE}
-library(WBdif)
-load("Bangladesh_Recoded.RData")
-midline <- bang.recode[bang.recode$line == "Mid",]
-
-i <- 1
-midline <- bang.recode[bang.recode$line == "Mid",]
-i <- 1
-
-# data prep is now via dif_data_prep
-dif.data <- dif_data_prep(item.data = midline[domain.items[[i]]],
-                         tx.group.id = midline$tx,
-                         dif.group.id = midline$gender,
-                         cluster.id = NULL,
-                         na.to.0 = F)
-```
-
-`dif_analysis` now takes `dif.data` as input rather than components thereof. 
-
-```{r, results='hide'}
-dif.analysis <- dif_analysis(dif.data = dif.data,
-                             methods = c("loess", "IRT"))
-```
-```{r}
-names(dif.analysis)
-```
-If no biased items are detected by `dif.analysis`, we should skip every thing that follows and just produce the report that says there was no DIF (I realize this is a change from before). 
-
-If there are biased items, `dif_models` runs the `dif.mod` identified by `dif.analysis`. This previously happened in `effect_robustness`. It also runs the `no.dif.mod` if needed, or just plucks it out of `dif.analysis`. 
-
-The argument `biased.items` can be one of `c("IRT, "MH", "logistic")` or a numeric vector indicating which columns from `item.data` to treat as biased. 
-
-All subsequent functions require `dif.analysis`, so, if it needs to be forced to run even when there was no `dif.analysis` reported no DIF (e.g., for debugging), manually enter a numeric vector for `biased.items`. 
-
-```{r, results='hide'}
-dif.models <- dif_models(dif.analysis, biased.items = c(1,2,3))
-```
-```{r}
-names(dif.models)
-```
-
-I spend a lot of time arriving back at the same plots we had in the first place...sigh
-
-```{r}
-bias.plots <- bias_plots(dif.models)
-gridExtra::grid.arrange(bias.plots[[1]], bias.plots[[2]])
-```
-
-The funciton `effect_robustness` is now just a wrapper for `hedges2007`, which replaces `est_smd` and `smd_wrapper`. The output is a `list` whose components are each like the `effects.data` object that was internal to `effects_robustness`. Functions for computing effect plots, tables, and coeff alpha are now external to `effect_robustness`. But, it still takes a while to run due to calling `mirt::fscores` ... 
-
-```{r}
-effects.list <- effect_robustness(dif.models)
-names(effects.list)
-```
-
-The effect size plots previously in `effect_robustness` are now called via `effects_plot` in the `newPlot-Functions.R` file
-
-```{r}
-(effects.plots <- lapply(effects.list, effects_plot))
-```
-
-The effect tables previously in `effect_robustness` is called via `effects_table`. The format is somewhat different, as I dropped the reliability adjusted effect sizes for the total scores and included the standard errors from `hedges2007`. 
-
-```{r}
-effects.tables <- lapply(effects.list, effects_table)
-lapply(effects.tables, knitr::kable)
-```
-
-
-Coefficient alpha is also now external to `effect_robustness`. This is just a wrapped on `est_alpha`.
-
-```{r}
-alphas.list <- coeff_alpha(dif.models)
-lapply(alphas.list, knitr::kable)
-```
-
-The function `effects_table` has an optional argument to include the alphas.
-
-
-```{r}
-effects.tables.with.alpha <- mapply(effects_table, effects.list, alphas.list)
-lapply(effects.tables.with.alpha, knitr::kable)
-```
-
-
-As I mentioned above, I didnt try to sort out how to put this into the report. I am hoping the individual pieces shown above will be easy to work with but let me know if not. I will work on updating documentation over the next few days. 
-
-
-=======
-```{r, echo = FALSE}
-# options(knitr.kable.NA = '',
-#         digits = 1,
-#         width = 80)
-set.seed(496)
-library(WBdif)
-```
-
-
 # WBdif
 
-**WBdif** contains functions to detect differential item functioning (DIF), estimate treatment effects, evaluate the robustness of treatment effects in the presence of DIF, and	produce reports summarizing the results. Development of **WBdif** was motivated by questions regarding the psychometric properties of the early childhood development assessments used by World Bank to evaluate intervention impacts.
+**WBdif** contains functions to detect differential item functioning (DIF), estimate unconditional and conditional treatment effects, evaluate the robustness of treatment effects in the presence of DIF, and	produce reports summarizing the results. Development of **WBdif** was motivated by questions regarding the psychometric properties of the early childhood development assessments used by World Bank to evaluate intervention impacts.
 
-The 3 main functions in **WBdif** are [`dif_analysis()`](#analysis), [`robustness()`](#robustness), and [`dif_report()`](#report).
+## Installation
 
-Say you have an assessment with both dichotomous and polytomous items and you want to know:
+```{r, eval = FALSE}
+install.packages("remotes")
+remotes::install_github("knickodem/WBdif")
+```
+
+
+## Features
+
+Say you have a measure with both dichotomous and polytomous items and you want to know:
 
   1. Do any items show DIF by gender?
   2. What method should I use to detect DIF?
   3. What is the treatment effect of the intervention?
   4. Does the treatment effect change when accounting for DIF-y items?
   
-The `dif_analysis()` function conducts a DIF analysis with any or all of the methods: Visual inspection via LOESS curves, Mantel-Haenszel, logistic regression, and item response theory. `dif_report()` then displays the results allowing you to compare the findings from each method. 
+**WBdif** has functionality to accommodate two approaches to answering these questions depending on your motivations and the nature of the measure (assessment/instrument/test).
 
-### Preparing the Data
+### All-in-One
 
-Prior to using any of the 3 main functions, an optional first step is to use the `dif_prep()` function to prepare the data.  
+The first approach requires only two functions (`dif_data_prep()` and `dif_synopsis()`) and produces an HTML report summarizing the DIF analysis results from up to 4 methods along with tables and plots illustrating treatment effects with and without adjusting for item bias.
 
-### Differential Item Functioning Analysis {#analysis}
-
-
-### Treatment Effect Robustness {#robustness}
-
-### Reporting {#report}
-
+`dif_data_prep()` is a pre-processing step that organizes input information for use in other **WBdif** functions and conducts some checks on the suitability of the data for a DIF analysis. When investigating treatment effect robustness, `dif_data_prep()` is also where you specify:
+ - whether the treatment effects are unconditional (i.e., only comparing treatment group to control group) or conditional on another variable (e.g., gender, race, age)
+ - which standard deviation to use in the denominator of the treatment effect size estimation (std.group)
+ - whether the data is clustered
  
-If you encounter any issues or have a suggestion for additional features, please file a [Github issue](https://github.com/knickodem/WBdif/issues) or contact us via email.
+`dif_synopsis()` is then a wrapper around all of the other functions needed to run the analysis and produce the report (hence All-in-One). Nonetheless, the function offers a variety of options to customize the both the analysis and reporting. For more details on each option see the Step-by-Step section. Given the All-in-One nature of `dif_synopsis()`, the code may take a few minutes to run before producing the report.
 
+#### Conditional Treatment Effects
+
+Below we specify both `tx.group.id` and `dif.group.id` indicating that we are interested in estimating the treatment effects conditional on gender. The code below generates [this report]().
+
+```{r, eval = FALSE}
+data("mdatlang")
+
+# prep data
+prepped <- dif_data_prep(item.data = mdatlang[5:ncol(mdatlang)],
+                         tx.group.id = mdatlang$treated,
+                         dif.group.id = mdatlang$gender,
+                         cluster.id = mdatlang$clusterid,
+                         std.group = NULL, # When NULL, the pooled standard deviation is used
+                         na.to.0 = TRUE)
+
+dif_synopsis(dif.data = prepped,
+             report.type = "dif.effects",
+             report.title = "Gender DIF Effects on MDAT Language",
+             measure.name = "MDAT Language",
+             file.name = "DIF-Effects-Gender-MDAT-Language",
+             dataset.name = "Malawi",
+             methods = c("loess", "MH", "logistic", "IRT"),
+             bias.method = "IRT",
+             match.type  = "Total")
+```
+
+#### Unconditional Treatment Effects
+
+When interested in unconditional effects, only one of `tx.group.id` or `dif.group.id` need to be supplied in `dif_data_prep()`.  `dif_synopsis()` recognizes how the data are prepared and estimates the appropriate treatment effect. Thus, the only arguments that might change are `report.title` and `file.name`, which generates [this report]().
+
+```{r, eval = FALSE}
+data("mdatlang")
+
+# prep data
+prepped <- dif_data_prep(item.data = mdatlang[5:ncol(mdatlang)],
+                         tx.group.id = mdatlang$treated,
+                         dif.group.id = NULL,
+                         cluster.id = mdatlang$clusterid,
+                         std.group = "Control", # "Control" is a value in mdatlang$treated
+                         na.to.0 = TRUE)
+
+dif_synopsis(dif.data = prepped,
+             report.type = "dif.effects",
+             report.title = "Tx DIF Effects on MDAT Language",
+             measure.name = "MDAT Language",
+             file.name = "DIF-Effects-Tx-MDAT-Language",
+             dataset.name = "Malawi",
+             methods = c("loess", "MH", "logistic", "IRT"),
+             bias.method = "IRT",
+             match.type  = "Total")
+```
+
+### Step-by-Step
+
+
+## Support and Suggestions
+
+If you encounter any issues or have a suggestion for additional features, please file a [Github issue](https://github.com/knickodem/WBdif/issues) or contact us via email.
