--- a/README.Rmd
+++ b/README.Rmd
@@ -1,12 +1,8 @@
 ---
-title: 'Summary of updates on "check" branch'
-author: "PFH"
-date: "Feb 5, 2020"
 output:
   github_document:
-    toc: yes
+    toc: FALSE
 ---
-
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
